# backend-lacrei-saude

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: settings.py  urls.py
appointments/: models.py
appointments/api/: serializers.py  viewsets.py
appointments/migrations/: 0001_initial.py
appointments/tests/: test_appointments.py
professionals/: models.py
professionals/api/: serializers.py  viewsets.py
professionals/migrations/: 0001_initial.py
professionals/tests/: test_credentials.py
